--- a/Dairy_Care_System/templates/checkoutorder.html
+++ b/Dairy_Care_System/templates/checkoutorder.html
@@ -111,7 +111,7 @@
         }
         
         .total-price h3 {
-            color: #0da84d;
+            color: #2f7c05;
             margin: 15px 0;
             font-size: 1.4em;
             font-weight: bold;
