--- a/Dairy_Care_System/templates/orderhistory.html
+++ b/Dairy_Care_System/templates/orderhistory.html
@@ -246,7 +246,7 @@
             <span>{{ order.order_date|date:"M. d, Y" }}</span>
             <span><strong>Status:</strong> {{ order.get_status_display }}</span>
             <!-- <span><strong>DeliveryAgent:</strong> {{ order.deliveryboy_id }}</span> -->
-            <span><strong>Total:</strong> ₹ {{ order.total_price }}</span>
+            <span><strong>Total:</strong> Rs. {{ order.total_price }}</span>
             <a href="{% url 'ordersummary' order.id %}" class="view-summary"><strong>View Receipt</strong></a>
             <a href="{% url 'orderfullsum' order.id %}" class="view-summary"><strong>Track Order</strong></a>
             {% if order.status == 'Pending' or order.status == 'Confirmed' or order.status == 'Shipped' %}
