--- a/Dairy_Care_System/templates/ordersummary.html
+++ b/Dairy_Care_System/templates/ordersummary.html
@@ -255,7 +255,7 @@
                     <img src="{{ item.product.images.first.image.url }}" alt="{{ item.product.product_name }}" style="width: 50px; height: 50px; margin-right: 10px;">
                     <span>{{ item.product.product_name }}</span>
                     <span>{{ item.quantity }}</span>
-                    <span>₹ {{ item.price }}</span>
+                    <span>Rs. {{ item.price }}</span>
                 </li>
             {% empty %}
                 <li>No items found for this order.</li>
@@ -263,7 +263,7 @@
         </ul>
         
         <div class="total-price">
-            Total Price: <strong>₹ {{ total_price }}</strong>
+            Total Price: <strong>Rs. {{ total_price }}</strong>
         </div>
 
         <div class="footer"><br><strong>
