--- a/Dairy_Care_System/templates/productdetails.html
+++ b/Dairy_Care_System/templates/productdetails.html
@@ -400,7 +400,7 @@
 
                 </div>
 
-                <p class="product-price">₹ {{ product.product_price }}</p>
+                <p class="product-price">Rs. {{ product.product_price }}</p>
 
                 <p class="product-description">{{ product.product_description }}</p>
 
