--- a/Dairy_Care_System/templates/deliveryboyassigns.html
+++ b/Dairy_Care_System/templates/deliveryboyassigns.html
@@ -492,7 +492,7 @@
                                     {{ order.get_status_display }}
                                 </span>
                             </td>
-                            <td class="price-column">₹{{ order.total_price }}</td>
+                            <td class="price-column">Rs. {{ order.total_price }}</td>
                             <td>
                                 <div class="order-date">
                                     <i class="far fa-calendar-alt"></i>
