--- a/Dairy_Care_System/templates/custproductslist.html
+++ b/Dairy_Care_System/templates/custproductslist.html
@@ -165,7 +165,7 @@
                 <!-- Category Dropdown -->
                 <select id="productCategory" name="product_category">
                     <option value="" disabled {% if not selected_category %}selected{% endif %}>Category search...</option>
-                    <option value="milk" {% if selected_category == "milk" %}selected{% endif %}>Milk</option>
+                    <!-- <option value="milk" {% if selected_category == "milk" %}selected{% endif %}>Milk</option> -->
                     <option value="spreads" {% if selected_category == "spreads" %}selected{% endif %}>Spreads</option>
                     <option value="non-fermented" {% if selected_category == "non-fermented" %}selected{% endif %}>Non-Fermented</option>
                     <option value="fermented" {% if selected_category == "fermented" %}selected{% endif %}>Fermented</option>
