--- a/Dairy_Care_System/templates/milkqualityanalysis.html
+++ b/Dairy_Care_System/templates/milkqualityanalysis.html
@@ -127,6 +127,11 @@
             transform: translateY(0);
         }
 
+        .error {
+            color: red;
+            font-size: 14px;
+        }
+
         /* Responsive adjustments */
         @media (max-width: 768px) {
             .container {
@@ -153,11 +158,12 @@
         <a href="{% url 'orderdetails' %}"><i class="fas fa-shopping-bag"></i> Order Details</a><br>
         <a href="{% url 'preorderfarm' %}"><i class="fas fa-clipboard-list"></i> Pre-Order Details</a><br>
         <!-- <a href="{% url 'milkdetails' %}"><i class="fas fa-glass-whiskey"></i> Milk Details</a><br> -->
-        <a href="{% url 'farmerproductstock' %}"><i class="fas fa-boxes"></i> Stock Details</a><br>
-        <a href="{% url 'milkqualityanalysis' %}"><i class="fas fa-microscope"></i> Quality Analysis</a><br>
-        <a href="{% url 'stocknotification' %}"><i class="fas fa-bell"></i> Notifications</a><br>
-        <a href="{% url 'feedbackreview' %}"><i class="fas fa-comments"></i> Feedback Review</a><br>
+        <a href="{% url 'milkqualityanalysis' %}" id="milkquality"><i class="fas fa-microscope"></i> Quality Analysis</a><br>
+        <a href="{% url 'demandmarketprice' %}" id="marketprice"><i class="fas fa-chart-line"></i> Market Price Analysis</a><br>
         <a href="{% url 'salegraph' %}"><i class="fas fa-chart-bar"></i> Sale</a><br>
+        <a href="{% url 'stocknotification' %}"><i class="fas fa-bell"></i> Notifications</a><br>
+        <a href="{% url 'farmerproductstock' %}"><i class="fas fa-boxes"></i> Stock Details</a><br>
+        <a href="{% url 'feedbackreview' %}"><i class="fas fa-comments"></i> Feedback Review</a><br>
         <a href="{% url 'farmownerpage' %}"><i class="fas fa-home home-icon"></i> Home</a><br>
     </div>
 
@@ -187,7 +193,7 @@
             <!-- Input Fields for Analysis -->
             <div class="input-group">
                 <label for="phLevel">pH Level:</label>
-                <input type="number" id="phLevel" step="0.01" placeholder="Enter pH (e.g., 6.5)">
+                <input type="number" id="phLevel" step="0.01" placeholder="Enter pH">
             </div>
     
             <div class="input-group">
@@ -315,3 +321,4 @@
 
 </body>
 </html>
+
