--- a/Dairy_Care_System/templates/diseasedetection.html
+++ b/Dairy_Care_System/templates/diseasedetection.html
@@ -2,11 +2,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Livestock Health Checker</title>
+    <!-- <title>Livestock Health Checker</title>
     <link rel="stylesheet" href="{% static 'css/headsidenav.css' %}">
     <link rel="stylesheet" href="{% static 'css/diseasedetection.css' %}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
-    <style>
+    <style> -->
     body {
         background: url('{% static "images/farmownerpage.jpg" %}') no-repeat center center fixed;
         background-size: cover;
